Ajout des exercice 2.1 -> 2.5

--- a/1_Introduction/Ex1-5.MD
+++ b/1_Introduction/Ex1-5.MD
@@ -11,12 +11,12 @@ Déterminer quel est le moyen de transport (train ou voiture) qui coûte moins c
 ## Algorithme
 Calculer ``coutTrajetVoiture = distanceDomicileTravail * (consommationEssence * prixLittreEssence / 100 + coutsAmortissementVoiture)``
  
-si ``coutTrajetVoiture < prixBilletTrain``
-    choix = voiture
-sinon si ``coutTrajetVoiture == prixBilletTrain``
-    choix = train ou voiture
-sinon
-    choix = train
+si ``coutTrajetVoiture < prixBilletTrain``  
+&nbsp;&nbsp; choix = voiture  
+sinon si ``coutTrajetVoiture == prixBilletTrain``  
+&nbsp;&nbsp; choix = train ou voiture  
+sinon  
+&nbsp;&nbsp; choix = train
     
 ## Vérification
 (Via code :D)
