--- a/1_Introduction/Ex1-6.MD
+++ b/1_Introduction/Ex1-6.MD
@@ -17,14 +17,14 @@ solde * (1 + Ta) = solde * (1 + Tm) ^ 12
 => Tm = (1 + Ta) ^ (1 / 12) - 1
 ````
 
-calculer ``txIntMens = (1 + TAUX_INTERET_ANNUEL) ^ (1 / 12) - 1``
-calculer ``solde = SOLDE_INITIAL``
+calculer ``txIntMens = (1 + TAUX_INTERET_ANNUEL) ^ (1 / 12) - 1``  
+calculer ``solde = SOLDE_INITIAL``  
 
-si ``solde * txIntMens >= RETRAIT``
-    Afficher ``"Le compte ne sera jamais à decouvert."``
-sinon
-    Tant que ``solde > 0``
-        ``solde = solde * (1 + txIntMens) ^ 12 - RETRAIT``
-        ``nbrMois++``
+si ``solde * txIntMens >= RETRAIT``  
+&nbsp;&nbsp; Afficher ``"Le compte ne sera jamais à decouvert."``
+sinon  
+    Tant que ``solde > 0``  
+&nbsp;&nbsp; ``solde = solde * (1 + txIntMens) ^ 12 - RETRAIT``  
+&nbsp;&nbsp; ``nbrMois++``  
 Affiche ``nbrMois``
         
