--- a/2_Elements_de_base/Ex2-5.MD
+++ b/2_Elements_de_base/Ex2-5.MD
@@ -1,18 +1,18 @@
-# Exercice 2.5 : 
+# Exercice 2.5 (corrigé): 
 #### Indiquez si les littéraux constants suivants sont corrects ou non. Dans le cas où le littéral constant est correct, indiquez son type; dans le cas contraire, expliquez pourquoi il est faux.
-1) 1.5 : double  
-2) 1E3 : faux, doit être écrit 1E+3  
-3) 12u : unsigned int  
-4) 12.0u : faux, un double ne peut pas être unsigned 
-5) 1L :    
-6) 1.0L  
-7) .5  
-8) 5.  
-9) 1000000000  
-10) 0x33  
-11) 0xefg  
-12) 0xef  
-13) 0xEF  
-14) 0x0.2  
-15) 08  
-16) 07  
+1 ) **1.5** : double  
+2 ) **1E3** : **< ! >** double  
+3 ) **12u** : unsigned int  
+4 ) **12.0u** : faux, un double ne peut pas être unsigned  
+5 ) **1L** : long    
+6 ) **1.0L** : long double  
+7 ) **.5** : **< ! >** double  
+8 ) **5.** : **< ! >** double  
+9 ) **1000000000** : **< ! >** Le plus petit type signé permettant de stocker ce nombre  
+10 ) **0x33** : int  
+11 ) **0xefg** : faux, g n'existe pas   
+12 ) **0xef** : **< ! >** int, f est représenté en hexa => F = 15  
+13 ) **0xEF** : int  
+14 ) **0x0.2** : **faux**  
+15 ) **08** :  **< ! >** faux, commence par 0 donc notation octale et 8 n'appartient pas à [0,7]  
+16 ) **07** :  int 
